# adventOfCode

./: .gitignore  README.md
rust/: Cargo.toml
rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  main.rs
rust/src/day05/: imperative.rs
zig/: build.zig  build.zig.zon
zig/src/: alloc.zig  consts.zig  day01.zig  day02.zig  day03.zig  day04.zig  day05.zig  day06.zig  day07.zig  main.zig  utils.zig
