[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"
description = "Solutions for advent of code 2022"
repository = "https://github.com/Ultra-Code/adventOfCode2022.git"
readme = "README.md"
license = "BSD 3-Clause New or Revised"
keywords = ["adventofcode", "aoc", "2022"]
categories = ["problem solving", "algorithms", "data structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
